# aktien-datenbank

./: .envrc  .gitignore  aktien-datenbank.code-workspace  aktiendb.service  aktiendb.timer  bgservice.py  clear_cache.sh  daemon.py  deploy_to_rasbi.bash  flake.nix  pp  pyproject.toml  pyproject.toml.old  pyvenv.cfg  setup.py  track_records.py  updateDatabase.py
.github/workflows/: updatedb.yml  updatedb_old.yml
aktiendb/: .env  download.py  downloadAlphaVantage.py  generateCSV.py  main.py  track_records.py  updateDatabase copy.py  updateDatabase.py
aktiendb.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
aktiendb/database/: depots.py  insert_prices.py  stock_info.py
aktiendb/stocks/: parse_price_frame.py
app/: generateCSV.py  track_records.py  updateDatabase.py
app/database/: client.py  insert_prices.py  stock_info.py
direnv/: flake.nix
scripts/: clear_cache.sh  pip_install_rasbi.sh
src/: generateCSV.py  main.py
src/aktiendatenbank/: updateDatabase.py
src/aktiendatenbank.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/aktiendatenbank/utils/: np_to_native.py
src/database/: HookWebpackError: Expected a pseudo-clas
src/stocks/: parse_price_frame.py
stocks/: parse_price_frame.py
