[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aktiendb"
version = "0.3"
dependencies = [
    "pandas",
    "yfinance",
    "supabase",
    "python-dotenv",
    "schedule",
]

[tool.setuptools]
packages = ["aktiendb",]

[project.scripts]
aktiendb-update = "aktiendb:updateDatabase.update"